--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
