Hero Slide Management from Admin and Github Action Update

--- a/.github/workflows/backup-database.yml
+++ b/.github/workflows/backup-database.yml
@@ -2,8 +2,8 @@ name: Database Backup
 
 on:
   schedule:
-    # Run daily at 2 AM UTC
-    - cron: "0 2 * * *"
+    # Run every 2 days at 2 AM UTC
+    - cron: "0 2 */2 * *"
   workflow_dispatch: # Allow manual trigger
 
 jobs:
